# python-recap

./: .gitignore  .python-version  README.md  pyproject.toml  qodana.yaml
python_recap/: __init__.py  __main__.py  exercise.py  fibonacci.py  fibonacci_sequence.py  flattened_list.py  get_min_days.py  is_perfect.py  is_prime.py  number_generator.py  palindrome.py  parse_name.py  pr_variables.py  recursion.py  scope1.py  type_hints.py  utils.py
tests/: fibonacci_sequence.py
